syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "agro.proto";

package models;

service AgroStorage {
	rpc Block (BlockRequest) returns (BlockResponse);
	rpc INode (INodeRequest) returns (INodeResponse);
	rpc PutBlock (PutBlockRequest) returns (PutResponse);
	rpc PutINode (PutINodeRequest) returns (PutResponse);
}

message Block {
	bool ok = 1;
	bytes data = 2;
}

message BlockRequest {
	repeated BlockRef block_refs = 1;
}

message BlockResponse {
	repeated Block blocks = 1;
}

message INodeRequest {
	repeated INodeRef inoderefs = 1 [(gogoproto.customname) = "INodeRefs"];
}

message INodeResponse {
	repeated INode inodes = 2 [(gogoproto.customname) = "INodes"];
}

message PutBlockRequest {
	repeated BlockRef refs = 1;
	repeated bytes blocks = 2;
}

message PutINodeRequest {
	repeated INodeRef refs = 1;
	repeated INode inodes = 2 [(gogoproto.customname) = "INodes"];
}

message PutResponse {
	bool ok = 1;
	string err = 2;
}

